Version 2.3.1: Fixed bug: Tabing out of bounds caused client side exception.

--- a/GridFastNavigation-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
+++ b/GridFastNavigation-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
@@ -28,6 +28,10 @@ $v-grid-header-background-color: #20a020;
    	 	}
    	}
    
+   	.row-edit-disabled > td {
+   		pointer-events: none;
+   	}
+   
 	.my-background {
 		background-color: blue;
 		color: white;
